tests/invalidTest/other/repeated_name_ptr_int.q
# EXPECT repeated variable name
def sint64 errorTest(){
    sint64* arr
    uint32 arr
}